# hector_navigation

./: .gitignore  .gitmodules  CMakeLists.txt
cmake_modules/: FindEigen3.cmake
frontiers_analysis/: CMakeLists.txt  package.xml
frontiers_analysis/include/frontiers_analysis/: frontier_analysis.h
frontiers_analysis/src/: frontier_analysis.cpp
hector_costmap/: CMakeLists.txt
hector_driving_aid_markers/: CMakeLists.txt
hector_elevation_mapping/src/: hector_elevation_mapping.cpp
hector_exploration_controller/src/: simple_exploration_controller.cpp
hector_exploration_node/: CMakeLists.txt  package.xml
hector_exploration_node/config/: costmap.yaml
hector_exploration_planner/: CMakeLists.txt  package.xml
hector_exploration_planner/cfg/: ExplorationPlanner.cfg
hector_exploration_planner/include/hector_exploration_planner/: custom_costmap_2d_ros.h  frontier_analysis.h  frontier_vis.h  hector_exploration_planner.h  info_gain_client.h
hector_exploration_planner/src/: .frontier_analysis.cpp.swp  .frontier_vis.cpp.swp  custom_costmap_2d_ros.cpp  frontier_analysis.cpp  frontier_vis.cpp  hector_exploration_planner.cpp  info_gain_client.cpp
hector_path_follower/: CMakeLists.txt  package.xml
hector_path_follower/cfg/: HectorPathFollower.cfg
hector_path_follower/include/hector_path_follower/: hector_path_follower.h
hector_path_follower/src/: hector_path_follower.cpp  hector_path_follower_node.cpp
